# gameEngine

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/gameengine/: MainActivity.java
app/src/main/res/values/: strings.xml
gameEngine/: build.gradle
gameEngine/src/androidTest/java/com/example/gameengine/: ExampleInstrumentedTest.java
gameEngine/src/main/: AndroidManifest.xml
gameEngine/src/main/cpp/: CMakeLists.txt  RenderJNI.cpp  native-lib.cpp
gameEngine/src/main/include/: btBulletDynamicsCommon.h
gameEngine/src/main/java/com/example/bulletopengles/: MainActivity.java  TriangleRenderJNI.java
gameEngine/src/main/res/values/: strings.xml  themes.xml
gameEngine/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
